[gd_scene load_steps=20 format=2]

[ext_resource path="res://assets/scripts/Droid.gd" type="Script" id=1]
[ext_resource path="res://assets/scenes/LifePoints.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/images/Droid.png" type="Texture" id=4]
[ext_resource path="res://assets/images/Life.png" type="Texture" id=5]

[sub_resource type="RectangleShape2D" id=52]
extents = Vector2( 4.25, 8 )

[sub_resource type="AtlasTexture" id=53]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=72]
atlas = ExtResource( 4 )
region = Rect2( 0, 48, 16, 16 )

[sub_resource type="AtlasTexture" id=73]
atlas = ExtResource( 4 )
region = Rect2( 0, 64, 16, 16 )

[sub_resource type="AtlasTexture" id=74]
atlas = ExtResource( 4 )
region = Rect2( 0, 80, 16, 16 )

[sub_resource type="AtlasTexture" id=75]
atlas = ExtResource( 4 )
region = Rect2( 0, 96, 16, 16 )

[sub_resource type="AtlasTexture" id=54]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=55]
atlas = ExtResource( 4 )
region = Rect2( 0, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=56]
atlas = ExtResource( 4 )
region = Rect2( 0, 32, 16, 16 )

[sub_resource type="SpriteFrames" id=57]
animations = [ {
"frames": [ SubResource( 53 ) ],
"loop": true,
"name": "default",
"speed": 10.0
}, {
"frames": [ SubResource( 72 ), SubResource( 73 ), SubResource( 74 ), SubResource( 75 ) ],
"loop": false,
"name": "firing",
"speed": 0.0
}, {
"frames": [ SubResource( 54 ), SubResource( 55 ), SubResource( 56 ) ],
"loop": true,
"name": "walk",
"speed": 10.0
} ]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 48, 16 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 5 )
region = Rect2( 0, 16, 48, 16 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 5 )
region = Rect2( 0, 32, 48, 16 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 5 )
region = Rect2( 0, 48, 48, 16 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": false,
"name": "default",
"speed": 0.0
} ]

[node name="Droid" type="KinematicBody2D"]
scale = Vector2( 2, 2 )
collision_layer = 4
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 1.75, 0 )
shape = SubResource( 52 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 57 )
animation = "walk"
frame = 2
playing = true

[node name="OnGround" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 10 )

[node name="NearObstacle" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( -25, 0 )

[node name="TowardsPlayer" type="RayCast2D" parent="."]
collision_mask = 3

[node name="LifePoints" parent="." instance=ExtResource( 3 )]
position = Vector2( 0.5, 16.5 )
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 5 )
